# humord

./: .gitignore  Makefile  README.md  README.txt  convert.xq  dodo.py  fix-thesaurusarray.ru  humord.scheme.ttl  list_distinct_element_names.xq  list_gen_se.xq  logging.yml  publish.py  publish.sh  pyproject.toml  requirements.txt  skosify.ini  stats.xq  ubo-onto.ttl  vocabulary.ttl
src/: humord.xml.etag  lambda.rdf  lambda.rdf.etag
